Added XSS in all the routes

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,5 +64,7 @@
 
 <script src="/public/js/client_side_validation.js"></script>
   <script src="/public/js/propertySearchAjax.js"></script>
+    <script src="/public/js/landlordSearchAjax.js"></script>
+
 </body>
 </html>
